Fix navbar spacing in Firefox

--- a/src/css/_objects.header-nav.less
+++ b/src/css/_objects.header-nav.less
@@ -53,6 +53,8 @@
   justify-self: center;
 
   filter: drop-shadow(@low-contrast-shadow);
+
+  display: grid;
 }
 
 .header-nav__title {
